// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-664"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root makeStyles-root-665 makeStyles-root-667"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input makeStyles-input-666"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-684 makeStyles-noShrink-685"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components Buttons 1`] = `
<div
  className="MuiBox-root MuiBox-root-2"
>
  <div
    className="MuiBox-root MuiBox-root-3"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Hower
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-24"
  >
    <button
      className="MuiButtonBase-root disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-25"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Cancel
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-26"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Back
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-27"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Full Width
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-28"
  >
    <button
      aria-label="Export as CSV"
      className="MuiButtonBase-root MuiFab-root makeStyles-root-29 MuiFab-extended makeStyles-extended-30 MuiFab-secondary makeStyles-secondary-32 MuiFab-sizeSmall makeStyles-sizeSmall-31"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiFab-label"
      >
        <div
          className="MuiBox-root MuiBox-root-43"
        >
          <img
            alt="Download"
            className="makeStyles-root-44"
            height={16}
            src="download.svg"
            width={16}
          />
        </div>
        <div
          className="MuiBox-root MuiBox-root-49"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary makeStyles-weight-52 makeStyles-weight-53"
          >
            Download
          </h6>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-95"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-98 makeStyles-weight-99"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root MuiBox-root-130"
    />
  </div>,
  <div
    className="MuiBox-root MuiBox-root-131"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-98 makeStyles-weight-132"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root MuiBox-root-133"
    />
  </div>,
  <div
    className="MuiBox-root MuiBox-root-134"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-98 makeStyles-weight-135"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root MuiBox-root-136"
    />
  </div>,
  <div
    className="MuiBox-root MuiBox-root-137"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-98 makeStyles-weight-138"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root MuiBox-root-139"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<div
  className="MuiBox-root MuiBox-root-141"
>
  <div
    className="MuiBox-root MuiBox-root-142"
  >
    <img
      alt="Iov Logo"
      className="makeStyles-root-143"
      src="iov-logo.png"
    />
  </div>
  <div
    className="MuiBox-root MuiBox-root-148"
  >
    <div
      className="MuiBox-root MuiBox-root-149"
    >
      <img
        alt="Download"
        className="makeStyles-root-143"
        height={16}
        src="download.svg"
        width={16}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root MuiBox-root-151"
>
  <div
    className="MuiBox-root MuiBox-root-152"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-155 makeStyles-weight-156 makeStyles-inline-153"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-155 makeStyles-weight-187 makeStyles-inline-153"
    >
       
      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-188"
  >
    <h6
      className="MuiTypography-root MuiTypography-h6 makeStyles-weight-155 makeStyles-weight-189"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root MuiBox-root-190"
  />
  <div
    className="MuiBox-root MuiBox-root-191"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-192"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-198"
  >
    <label
      className="MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-216 MuiSwitch-switchBase MuiSwitch-colorPrimary"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-thumb"
            />
            <input
              className="PrivateSwitchBase-input-219 MuiSwitch-input"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track"
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root MuiBox-root-262"
  >
    <label
      className="MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-216 MuiSwitch-switchBase MuiSwitch-colorPrimary"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-thumb"
            />
            <input
              className="PrivateSwitchBase-input-219 MuiSwitch-input"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track"
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-377"
  >
    <div
      className="MuiBox-root MuiBox-root-378"
    >
      <div
        className="MuiBox-root MuiBox-root-379"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Click to generate INFO toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-402 makeStyles-weight-403"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-info-436"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message"
        >
          <div
            className="MuiBox-root MuiBox-root-472 makeStyles-message-440"
          >
            <div
              className="makeStyles-iconBackground-441"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-473"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root MuiTypography-subtitle1 makeStyles-info-436 makeStyles-weight-402 makeStyles-weight-478"
            >
              Hi INFO this is a cool feature. Stay tuned
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <img
                alt="Close"
                className="makeStyles-root-473"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root MuiBox-root-488"
    >
      <div
        className="MuiBox-root MuiBox-root-489"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Click to generate WARN toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-402 makeStyles-weight-490"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-warning-437"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message"
        >
          <div
            className="MuiBox-root MuiBox-root-491 makeStyles-message-440"
          >
            <div
              className="makeStyles-iconBackground-441"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-473"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root MuiTypography-subtitle1 makeStyles-warning-437 makeStyles-weight-402 makeStyles-weight-492"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <img
                alt="Close"
                className="makeStyles-root-473"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root MuiBox-root-493"
    >
      <div
        className="MuiBox-root MuiBox-root-494"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Click to generate ERROR toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-402 makeStyles-weight-495"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-error-435"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message"
        >
          <div
            className="MuiBox-root MuiBox-root-496 makeStyles-message-440"
          >
            <div
              className="makeStyles-iconBackground-441"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-473"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root MuiTypography-subtitle1 makeStyles-error-435 makeStyles-weight-402 makeStyles-weight-497"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <img
                alt="Close"
                className="makeStyles-root-473"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-274"
  >
    <div
      className="makeStyles-container-276"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-279"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root MuiBox-root-284"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-287 makeStyles-weight-288 makeStyles-inline-285"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-276"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-279"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-321 makeStyles-weight-322"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root MuiTypography-h4 makeStyles-weight-321 makeStyles-weight-353"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-321 makeStyles-weight-354"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root MuiTypography-h5 makeStyles-weight-321 makeStyles-weight-355"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-321 makeStyles-weight-356"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-h6 makeStyles-weight-321 makeStyles-weight-357"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-321 makeStyles-weight-358"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root MuiTypography-body1 makeStyles-weight-321 makeStyles-weight-359"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-321 makeStyles-weight-360"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root MuiTypography-body2 makeStyles-weight-321 makeStyles-weight-361"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-321 makeStyles-weight-362"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 makeStyles-weight-321 makeStyles-weight-363"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-321 makeStyles-weight-364"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-321 makeStyles-weight-365"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-321 makeStyles-weight-366"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary makeStyles-weight-321 makeStyles-weight-367 makeStyles-inline-319"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-321 makeStyles-weight-368 makeStyles-inline-319"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Components/forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-561 MuiOutlinedInput-notchedOutline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="PrivateNotchedOutline-legend-562"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-564"
  >
    <div
      className="makeStyles-dropdown-565"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root makeStyles-root-566 makeStyles-root-568"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input makeStyles-input-567"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-569 makeStyles-noShrink-570"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary disabled"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components/forms TextFieldForm 1`] = `
<div
  className="MuiBox-root MuiBox-root-595"
>
  <div
    className="MuiBox-root MuiBox-root-596"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root error error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root error error MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-650 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-651"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input MuiOutlinedInput-input"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root MuiFormHelperText-contained error"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-660"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-650 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-651"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-661"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root disabled disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root disabled disabled MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-650 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-651"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input disabled disabled"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-662"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-650 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-651"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-663"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-650 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-651"
              style={
                Object {
                  "width": 0,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <textarea
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={5}
            value="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Routes/Account Show account status 1`] = `
<div
  className="MuiBox-root MuiBox-root-697"
  id="/account"
>
  <div
    className="MuiBox-root MuiBox-root-698"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-701 makeStyles-weight-702 makeStyles-inline-699"
    >
      Account
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-701 makeStyles-weight-733 makeStyles-inline-699"
    >
       
      Status
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-734"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-735"
      >
        <h6
          className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-701 makeStyles-weight-736"
        >
          Available accounts
        </h6>
      </div>
      <div
        className="makeStyles-dropdown-737"
        onClick={[Function]}
      >
        <div
          className="MuiInputBase-root makeStyles-root-738 makeStyles-root-740"
          onClick={[Function]}
          role="button"
        >
          <input
            autoComplete="off"
            className="MuiInputBase-input makeStyles-input-739"
            name="SELECT_FIELD_ATTR"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
        <img
          alt="Phone Menu"
          className="makeStyles-root-757 makeStyles-noShrink-758"
          height="5"
          src="selectChevron.svg"
          width="8"
        />
      </div>
    </form>
    <div
      className="MuiBox-root MuiBox-root-762"
    />
    <div
      className="MuiBox-root MuiBox-root-763"
    >
      <nav
        className="MuiList-root MuiList-padding"
      >
        <div
          className="MuiBox-root MuiBox-root-768"
        >
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemText-root"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 makeStyles-weight-701 makeStyles-weight-786"
              >
                Transations
              </p>
            </div>
          </li>
        </div>
        <div
          className="MuiBox-root MuiBox-root-787"
        />
        <div
          className="MuiBox-root MuiBox-root-791"
        />
        <li
          className="MuiListItem-root MuiListItem-gutters makeStyles-center-789"
          disabled={false}
        >
          <div
            className="MuiListItemIcon-root makeStyles-empty-788"
          >
            <img
              alt="No Transations"
              className="makeStyles-root-757"
              height="42"
              src="uptodate.svg"
            />
          </div>
          <div
            className="MuiListItemText-root makeStyles-text-790"
          >
            <span
              className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary"
            >
              No Transations
            </span>
          </div>
        </li>
      </nav>
    </div>
    <div
      className="MuiBox-root MuiBox-root-793"
    >
      <nav
        className="MuiList-root MuiList-padding"
      >
        <div
          className="MuiBox-root MuiBox-root-794"
        >
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemText-root"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 makeStyles-weight-701 makeStyles-weight-795"
              >
                Pending Transactions
              </p>
            </div>
          </li>
        </div>
        <div
          className="MuiBox-root MuiBox-root-796"
        />
        <div
          className="MuiBox-root MuiBox-root-797"
        />
        <li
          className="MuiListItem-root MuiListItem-gutters makeStyles-center-789"
          disabled={false}
        >
          <div
            className="MuiListItemIcon-root makeStyles-empty-788"
          >
            <img
              alt="No Pending Transactions"
              className="makeStyles-root-757"
              height="42"
              src="uptodate.svg"
            />
          </div>
          <div
            className="MuiListItemText-root makeStyles-text-790"
          >
            <span
              className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary"
            >
              No Pending Transactions
            </span>
          </div>
        </li>
      </nav>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-798"
  />
  <div
    className="MuiBox-root MuiBox-root-799"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-757"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Login Login page 1`] = `
<div
  className="MuiBox-root MuiBox-root-808"
  id="/login"
>
  <div
    className="MuiBox-root MuiBox-root-809"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-812 makeStyles-weight-813 makeStyles-inline-810"
    >
      Log
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-812 makeStyles-weight-844 makeStyles-inline-810"
    >
       
      In
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-845"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-846"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-881 MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-882"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-883"
      >
        <div
          className="MuiBox-root MuiBox-root-884"
        >
          <button
            className="MuiButtonBase-root disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary disabled MuiButton-fullWidth"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      className="MuiBox-root MuiBox-root-905"
    >
      <div
        className="MuiBox-root MuiBox-root-906"
      >
        <a
          href="/restore-account"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary makeStyles-weight-812 makeStyles-weight-907 makeStyles-inline-810 makeStyles-link-811"
          >
            Restore account
          </h6>
        </a>
      </div>
      <div
        className="MuiBox-root MuiBox-root-908"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary makeStyles-weight-812 makeStyles-weight-909 makeStyles-inline-810 makeStyles-link-811"
          >
            More options
          </h6>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-910"
  />
  <div
    className="MuiBox-root MuiBox-root-911"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-912"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Recovery phrase Main 1`] = `
<div
  className="MuiBox-root MuiBox-root-918"
  id="/recovery-phrase"
>
  <div
    className="MuiBox-root MuiBox-root-919"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-922 makeStyles-weight-923 makeStyles-inline-920"
    >
      Recovery
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-922 makeStyles-weight-954 makeStyles-inline-920"
    >
       
      phrase
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-955"
  >
    <div
      className="MuiBox-root MuiBox-root-956"
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-922 makeStyles-weight-957"
      >
        Your Recovery Phrase are 12 random words that are set in a particular order that acts as a tool to recover or back up your wallet on any platform.
      </h6>
    </div>
    <div
      className="MuiBox-root MuiBox-root-958"
    >
      <button
        aria-label="Export as CSV"
        className="MuiButtonBase-root MuiFab-root makeStyles-root-959 MuiFab-extended makeStyles-extended-960 MuiFab-secondary makeStyles-secondary-962 MuiFab-sizeSmall makeStyles-sizeSmall-961"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          <div
            className="MuiBox-root MuiBox-root-976"
          >
            <img
              alt="Download"
              className="makeStyles-root-977"
              height={16}
              src="download.svg"
              width={16}
            />
          </div>
          <div
            className="MuiBox-root MuiBox-root-982"
          >
            <h6
              className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary makeStyles-weight-922 makeStyles-weight-983"
            >
              Export as .PDF
            </h6>
          </div>
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root MuiBox-root-984"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-922 makeStyles-weight-985 makeStyles-inline-920"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root MuiBox-root-986"
    >
      <div
        className="MuiBox-root MuiBox-root-987"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Back
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1005"
  />
  <div
    className="MuiBox-root MuiBox-root-1006"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-977"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Restore Account Restore 1`] = `
<div
  className="MuiBox-root MuiBox-root-1018"
  id="/restore-account"
>
  <div
    className="MuiBox-root MuiBox-root-1019"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1022 makeStyles-weight-1023 makeStyles-inline-1020"
    >
      Restore
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1022 makeStyles-weight-1054 makeStyles-inline-1020"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1055"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 makeStyles-weight-1022 makeStyles-weight-1056 makeStyles-inline-1020"
    >
      Restore your account with your recovery words. Enter your recovery words here.
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1057"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1092 MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1093"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <textarea
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
              disabled={false}
              name="recoveryPhraseField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Recovery phrase"
              required={false}
              rows={5}
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1094"
      >
        <div
          className="MuiBox-root MuiBox-root-1095"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1116"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Restore
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1117"
  />
  <div
    className="MuiBox-root MuiBox-root-1118"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1119"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Share Identity Share Identity 1`] = `
<div
  className="MuiBox-root MuiBox-root-1135"
>
  <div
    className="MuiBox-root MuiBox-root-1136"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1139 makeStyles-weight-1140 makeStyles-inline-1137"
    >
      Share
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1139 makeStyles-weight-1171 makeStyles-inline-1137"
    >
       
      identity
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1172"
  >
    <div
      className="MuiBox-root MuiBox-root-1173"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1139 makeStyles-weight-1174"
      >
        The following site:
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary makeStyles-weight-1139 makeStyles-weight-1175"
      >
        http://finex.com
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1139 makeStyles-weight-1176 makeStyles-inline-1137"
      >
        wants to see you identity on
      </p>
       
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary makeStyles-weight-1139 makeStyles-weight-1177 makeStyles-inline-1137"
      >
        BTC
      </p>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1178"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Accept
      </span>
    </button>
    <div
      className="MuiBox-root MuiBox-root-1199"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Reject
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1200"
  />
  <div
    className="MuiBox-root MuiBox-root-1201"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1202"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1218"
  id="/signup1"
>
  <div
    className="MuiBox-root MuiBox-root-1219"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1222 makeStyles-weight-1223 makeStyles-inline-1220"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1222 makeStyles-weight-1254 makeStyles-inline-1220"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1255"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1256"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root required required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1310 MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1311"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1312"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root required required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1310 MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1311"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1313"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root required required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1310 MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1311"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1314"
      >
        <div
          className="MuiBox-root MuiBox-root-1315"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1336"
        >
          <button
            className="MuiButtonBase-root disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary disabled MuiButton-fullWidth"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1337"
  />
  <div
    className="MuiBox-root MuiBox-root-1338"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1339"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1355"
  id="/signup2"
>
  <div
    className="MuiBox-root MuiBox-root-1356"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1359 makeStyles-weight-1360 makeStyles-inline-1357"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1359 makeStyles-weight-1391 makeStyles-inline-1357"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1392"
  >
    <div
      className="MuiBox-root MuiBox-root-1393"
    >
      <div
        className="MuiBox-root MuiBox-root-1394"
      >
        <div
          className="MuiBox-root MuiBox-root-1395"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-1359 makeStyles-weight-1396 makeStyles-inline-1357"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-1398"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-1401"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root"
      >
        <span
          className="MuiSwitch-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1423 MuiSwitch-switchBase MuiSwitch-colorPrimary"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <span
                className="MuiSwitch-thumb"
              />
              <input
                className="PrivateSwitchBase-input-1426 MuiSwitch-input"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track"
          />
        </span>
        <span
          className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
        />
      </label>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1439"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1359 makeStyles-weight-1440 makeStyles-inline-1357"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1441"
    >
      <div
        className="MuiBox-root MuiBox-root-1442"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Back
          </span>
        </button>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1460"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1461"
  />
  <div
    className="MuiBox-root MuiBox-root-1462"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1401"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1474"
  id="/signup3"
>
  <div
    className="MuiBox-root MuiBox-root-1475"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1478 makeStyles-weight-1479 makeStyles-inline-1476"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1478 makeStyles-weight-1510 makeStyles-inline-1476"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1511"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 makeStyles-weight-1478 makeStyles-weight-1512 makeStyles-inline-1476"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1513"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1548 MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1549"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1550"
      >
        <div
          className="MuiBox-root MuiBox-root-1551"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1572"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1573"
  />
  <div
    className="MuiBox-root MuiBox-root-1574"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1575"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1591"
  id="/welcome"
>
  <div
    className="MuiBox-root MuiBox-root-1592"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1595 makeStyles-weight-1596 makeStyles-inline-1593"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1595 makeStyles-weight-1627 makeStyles-inline-1593"
    >
       
      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1628"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1595 makeStyles-weight-1629 makeStyles-inline-1593"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root MuiBox-root-1630"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Log in
      </span>
    </button>
    <div
      className="MuiBox-root MuiBox-root-1651"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        New account
      </span>
    </button>
    <div
      className="MuiBox-root MuiBox-root-1652"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Import account
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1653"
  />
  <div
    className="MuiBox-root MuiBox-root-1654"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1655"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
